--- a/src/main/resources/resources/light.less
+++ b/src/main/resources/resources/light.less
@@ -799,11 +799,9 @@ legend, main #form-canvas .subform-section-title span {
     color: @fontLabelColor;
 }
 
-.activeFont,
-.buttonFontSize.activeFont {
+.activeFont {
     color: @buttonText !important;
     background-color: @button !important;
-    border-color: @button !important;
 }
 
 /* Datalist filter submit: consistent theme button color, disable waves tint */
